# simnet

./: .gitignore  README.md  pyproject.toml
datasets/aminoacyl/00_input/: inputfile  tree.newick
scripts/: 00_fetch_data.py  01_preprocessing.py  02_alignment.py  03_chg_building.py  04_network_construction.py  05_network_reduction.py  06_phylogeny.py  07_hgt_scoring.py  run_pipeline.py
src/simnet_hgt/: pipeline.py
src/simnet_hgt/alignment/: __init__.py  search.py  utils.py
src/simnet_hgt/data_fetching/: __init__.py  cache.py  client.py  config.py  genome.py  genome_fetcher.py  metadata.py  parser.py  pipeline.py  storage.py
src/simnet_hgt/hgt/: __init__.py  analysis.py  analyze_scores.py  loaders.py  models.py  postprocessing.py  ranks.py  score.py  scorers.py  thresholds.py  visualization.py
src/simnet_hgt/lgt_detection/: compare.py  mapping.py
src/simnet_hgt/network_analysis/: __init__.py  bipartite_network.py  community_detection.py  connected_components.py  g2g_netwrok.py  io.py  network.py  network_reduction.py
src/simnet_hgt/phylogeny/: __init__.py  pairwise_distance.py  pipeline.py  tree_builder.py  tree_prep.py
src/simnet_hgt/preprocessing/: __init__.py  core.py  input_parsing.py
src/simnet_hgt/utils/: __init__.py  validation.py
